# Yes24-Ticket-Macro

./: .gitignore  LICENSE  README.md  config.py  main.py  pyproject.toml  requirements.txt
src/: marco.py
src/driver/: __init__.py  chorme_driver.py  elements.py
src/helper/: captcha_reader.py  notify.py  seat_checker.py
src/selector/: __init__.py  date_time_selector.py  main_selector.py  seat_selector.py
